# 2048

./: README.md  docker-compose.yml  package-lock.json  package.json  run.sh
backend/: .flaskenv  Dockerfile  Dockerfile-simple  Makefile  backend.py  config.py  create_db.py  docker-commands.txt  highscores.db  pyproject.toml  requirements.txt
backend/.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  config.data.json  config.meta.json  datetime.meta.json  enum.meta.json  io.meta.json  mmap.meta.json  posix.data.json  posix.meta.json  socket.meta.json  socketserver.meta.json  ssl.data.json  ssl.meta.json  string.meta.json  sys.meta.json  time.data.json  time.meta.json  types.data.json  types.meta.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json  uuid.meta.json
backend/app/: __init__.py  api.py  models.py
backend/backend/: backend.py  highscores.db
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/static/react/: :w  asset-manifest.json  precache-manifest.02ca762c2392b9128c6214e16c7ae088.js  precache-manifest.0f3f0c40b4d3ad8cd1abb790c9d26d02.js  precache-manifest.12132131383c970f7fce90fa0b4731fa.js  precache-manifest.2a84bb26293bf2218ddb9cbff8606693.js  precache-manifest.4b40b609f681d076424f693697db9064.js  precache-manifest.8c68a98ed19e362c6d765cdf1e04239e.js  precache-manifest.95373b2cc0f8ee793cc9e40ea7a97b5f.js  service-worker.js  (+2 more)
backend/templates/: home.html  index.html
backend/tests/: test_scores.py
(+396 files in other folders)
