[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend logic for 2048"
authors = ["Regina <reginalin714@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
config = "^0.4.2"
Flask = "^1.1.1"
Flask-Cors = "^3.0.8"
Click = "^7.0"
Flask-SQLAlchemy = "^2.4.0"
itsdangerous = "^1.1.0"
Jinja2 = "^2.10.1"
MarkupSafe = "^1.1.1"
python-dotenv = "^0.10.3"
six = "^1.12.0"
SQLAlchemy = "^1.3.8"
typed-ast = "^1.4.0"
typing-extensions = "^3.7.4"
Werkzeug = "^0.15.6"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
mypy = "^0.720"
mypy-extensions = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
